Add some markup updates.

--- a/index.html
+++ b/index.html
@@ -10,29 +10,41 @@
 
 <body>
   <!-- Header section -->
-  <div>
-    <ul>
-      <li>Menu</li>
-      <li>Rewards</li>
-      <li>Gift Cards</li>
-    </ul>
+  <header>
+    <div>
+      <a href="/">
+        <img src="#" />
+      </a>
 
-    Find a store
+      <ul>
+        <li>Menu</li>
+        <li>Rewards</li>
+        <li>Gift Cards</li>
+      </ul>
+    </div>
 
-    <button>Sign in</button>
-    <button>Join now</button>
-  </div>
+    <div>
+      Find a store
+      <button>Sign in</button>
+      <button>Join now</button>
+    </div>
+  </header>
 
   <!-- Main content -->
-  <h1>Starbucks Rewards</h1>
-  Join now to start earning Rewards
+  <div>
+    <div>Starbuck's Reward</div>
 
-  <button>Join now</button>
-  Or <a href="#">join in the app</a> for the best experience
+    <h1>Free Coffee is a tap away</h1>
+
+    Join now to start earning Rewards
+
+    <button>Join now</button>
+    Or <a href="#">join in the app</a> for the best experience
+  </div>
 
   <!-- Second block -->
   <h2>Getting started is easy</h2>
-  Earn Stars and get rewarded in a few easy steps.
+  <p>Earn Stars and get rewarded in a few easy steps.</p>
 
   <h3>Create an account</h3>
   <p>To get started, <a href="#">join now.</a> You can also <a href="#">join in the app</a> to get access to the full
@@ -48,25 +60,31 @@
 
   <!-- Third section -->
   <h2>Get your favorites for free</h2>
-  <h3>25⭐</h3>
-  <h4>Customize your drink</h4>
-  <p>Make your drink just right with an extra espresso shot, dairy substitute or a dash of your favorite syrup.</p>
 
-  <h3>50⭐</h3>
-  <h4>Brewed hot coffee, bakery item or hot tea</h4>
-  <p>Pair coffee cake or an almond croissant with your fresh cup of hot brew.</p>
+  <div>
+    <div>
+      <h3>25⭐</h3>
+      <h4>Customize your drink</h4>
+      <p>Make your drink just right with an extra espresso shot, dairy substitute or a dash of your favorite syrup.</p>
+    </div>
 
-  <h3>150⭐</h3>
-  <h4>Handcrafted drink, hot breakfast or parfait</h4>
-  <p>Have a really good morning with a breakfast sandwich, oatmeal or your favorite drink.</p>
+    <h3>50⭐</h3>
+    <h4>Brewed hot coffee, bakery item or hot tea</h4>
+    <p>Pair coffee cake or an almond croissant with your fresh cup of hot brew.</p>
 
-  <h3>200⭐</h3>
-  <h4>Salad, sandwich or protein box</h4>
-  <p>Nourish your day with a hearty Chipotle Chicken Wrap or Eggs & Cheese Protein Box.</p>
+    <h3>150⭐</h3>
+    <h4>Handcrafted drink, hot breakfast or parfait</h4>
+    <p>Have a really good morning with a breakfast sandwich, oatmeal or your favorite drink.</p>
 
-  <h3>400⭐</h3>
-  <h4>Select merchandise or at-home coffee</h4>
-  <p>Take home a signature cup, a bag of coffee or your choice of select coffee accessories.</p>
+    <h3>200⭐</h3>
+    <h4>Salad, sandwich or protein box</h4>
+    <p>Nourish your day with a hearty Chipotle Chicken Wrap or Eggs & Cheese Protein Box.</p>
+
+    <h3>400⭐</h3>
+    <h4>Select merchandise or at-home coffee</h4>
+    <p>Take home a signature cup, a bag of coffee or your choice of select coffee accessories.</p>
+  </div>
+
 
   <!-- Fourth Section -->
   <h2>Endless Extras</h2>
