--- a/index.html
+++ b/index.html
@@ -9,9 +9,10 @@
 </head>
 
 <body>
-  <!-- Header section -->
+  <!-- Header Section -->
   <header>
     <div>
+      <!-- LOGO -->
       <a href="/">
         <img src="#" />
       </a>
@@ -24,110 +25,169 @@
     </div>
 
     <div>
-      Find a store
+      <a>Find a store</a>
       <button>Sign in</button>
       <button>Join now</button>
     </div>
   </header>
 
-  <!-- Main content -->
+  <!-- Main Section -->
+
+  <!-- When scrolling through the website, it's always visible and fixed. -->
+  <div>Starbuck's Reward</div>
+
   <div>
-    <div>Starbuck's Reward</div>
-
     <h1>Free Coffee is a tap away</h1>
-
-    Join now to start earning Rewards
+    <p>Join now to start earning Rewards.</p>
 
     <button>Join now</button>
-    Or <a href="#">join in the app</a> for the best experience
+    <p><a href="#">join in the app</a> for the best experience</p>
   </div>
 
-  <!-- Second block -->
-  <h2>Getting started is easy</h2>
-  <p>Earn Stars and get rewarded in a few easy steps.</p>
-
-  <h3>Create an account</h3>
-  <p>To get started, <a href="#">join now.</a> You can also <a href="#">join in the app</a> to get access to the full
-    range of Starbucks® Rewards benefits.</p>
-
-  <h3>Order and pay how you’d like</h3>
-  <p>Use cash, credit/debit card or save some time and pay right through the app. You’ll collect Stars all ways. <a
-      href="#">Learn how</a></p>
-
-  <h3>Earn Stars, get Rewards</h3>
-  <p>As you earn Stars, you can redeem them for Rewards—like free food, drinks, and more. Start redeeming with as little
-    as 25 Stars!</p>
-
-  <!-- Third section -->
-  <h2>Get your favorites for free</h2>
-
+  <!-- Second Section -->
   <div>
     <div>
-      <h3>25⭐</h3>
-      <h4>Customize your drink</h4>
-      <p>Make your drink just right with an extra espresso shot, dairy substitute or a dash of your favorite syrup.</p>
+      <h2>Getting started is easy</h2>
+      <p>Earn Stars and get rewarded in a few easy steps.</p>
     </div>
 
-    <h3>50⭐</h3>
-    <h4>Brewed hot coffee, bakery item or hot tea</h4>
-    <p>Pair coffee cake or an almond croissant with your fresh cup of hot brew.</p>
+    <div>
+      <div>
+        <h3>Create an account</h3>
+        <p>To get started, <a href="#">join now.</a> You can also <a href="#">join in the app</a> to get access to the
+          full
+          range of Starbucks® Rewards benefits.</p>
+      </div>
 
-    <h3>150⭐</h3>
-    <h4>Handcrafted drink, hot breakfast or parfait</h4>
-    <p>Have a really good morning with a breakfast sandwich, oatmeal or your favorite drink.</p>
+      <div>
+        <h3>Order and pay how you’d like</h3>
+        <p>Use cash, credit/debit card or save some time and pay right through the app. You’ll collect Stars all ways.
+          <a href="#">Learn how</a>
+        </p>
+      </div>
 
-    <h3>200⭐</h3>
-    <h4>Salad, sandwich or protein box</h4>
-    <p>Nourish your day with a hearty Chipotle Chicken Wrap or Eggs & Cheese Protein Box.</p>
-
-    <h3>400⭐</h3>
-    <h4>Select merchandise or at-home coffee</h4>
-    <p>Take home a signature cup, a bag of coffee or your choice of select coffee accessories.</p>
+      <div>
+        <h3>Earn Stars, get Rewards</h3>
+        <p>As you earn Stars, you can redeem them for Rewards—like free food, drinks, and more. Start redeeming with as
+          little as 25 Stars!</p>
+      </div>
+    </div>
   </div>
 
+  <!-- Third Section -->
+  <div>
+    <h2>Get your favorites for free</h2>
+
+    <div>
+      <div>
+        <h3>25⭐</h3>
+        <h4>Customize your drink</h4>
+        <p>Make your drink just right with an extra espresso shot, dairy substitute or a dash of your favorite syrup.
+        </p>
+      </div>
+
+      <div>
+        <h3>50⭐</h3>
+        <h4>Brewed hot coffee, bakery item or hot tea</h4>
+        <p>Pair coffee cake or an almond croissant with your fresh cup of hot brew.</p>
+      </div>
+
+      <div>
+        <h3>150⭐</h3>
+        <h4>Handcrafted drink, hot breakfast or parfait</h4>
+        <p>Have a really good morning with a breakfast sandwich, oatmeal or your favorite drink.</p>
+      </div>
+
+      <div>
+        <h3>200⭐</h3>
+        <h4>Salad, sandwich or protein box</h4>
+        <p>Nourish your day with a hearty Chipotle Chicken Wrap or Eggs & Cheese Protein Box.</p>
+      </div>
+
+      <div>
+        <h3>400⭐</h3>
+        <h4>Select merchandise or at-home coffee</h4>
+        <p>Take home a signature cup, a bag of coffee or your choice of select coffee accessories.</p>
+      </div>
+    </div>
+  </div>
 
   <!-- Fourth Section -->
-  <h2>Endless Extras</h2>
-  <p>Joining Starbucks® Rewards means unlocking access to exclusive benefits. Say hello to easy ordering, tasty Rewards
-    and—yes, free coffee.</p>
+  <div>
+    <div>
+      <h2>Endless Extras</h2>
+      <p>Joining Starbucks® Rewards means unlocking access to exclusive benefits. Say hello to easy ordering, tasty
+        Rewards
+        and—yes, free coffee.</p>
+    </div>
 
-  <h4>Fun freebies</h4>
-  <p>Not only can you earn free coffee, look forward to a birthday treat plus coffee and tea refills.</p>
-  <a href="#">Learn more</a>
+    <div>
+      <div>
+        <h4>Fun freebies</h4>
+        <p>Not only can you earn free coffee, look forward to a birthday treat plus coffee and tea refills.</p>
+        <a href="#">Learn more</a>
+      </div>
 
-  <h4>Order & pay ahead</h4>
-  <p>Enjoy the convenience of in-store, curbside or drive-thru pickup at select stores.</p>
-  <a href="#">Learn more</a>
+      <div>
+        <h4>Order & pay ahead</h4>
+        <p>Enjoy the convenience of in-store, curbside or drive-thru pickup at select stores.</p>
+        <a href="#">Learn more</a>
+      </div>
 
-  <h4>Get to free faster</h4>
-  <p>Earn Stars even quicker with Bonus Star challenges, Double Star Days and exciting games.</p>
-  <a href="#">Learn more</a>
+      <div>
+        <h4>Get to free faster</h4>
+        <p>Earn Stars even quicker with Bonus Star challenges, Double Star Days and exciting games.</p>
+        <a href="#">Learn more</a>
+      </div>
+    </div>
+  </div>
 
-  <!-- Fifth section -->
-  <h2>Cash or card, you earn Stars</h2>
-  <p>No matter how you pay, you can earn Stars with your morning coffee. Those Stars add up to (really delicious)
-    Rewards.</p>
+  <!-- Fifth Section -->
+  <table>
+    <thead>
+      <h2>Cash or card, you earn Stars</h2>
+      <p>No matter how you pay, you can earn Stars with your morning coffee. Those Stars add up to (really
+        delicious) Rewards.</p>
+      <!-- <tr>
+        <th>
+        </th>
+      </tr> -->
+    </thead>
 
-  <h3>1★Star per dollar</h3>
-  Pay as you go
+    <tbody>
+      <tr>
+        <td>
+          <h3>1★Star per dollar</h3>
+          <p>Pay as you go</p>
+        </td>
+        <td>
+          <h4>Scan and pay separately</h4>
+          <p>Use cash or credit/debit card at the register.</p>
+        </td>
+        <td>
+          <h4>Save payment in the app</h4>
+          <p>Check-out faster by saving a credit/debit card or PayPal to your account. You’ll be able to order ahead or
+            scan and pay at the register in one step.</p>
+        </td>
+      </tr>
 
-  <h4>Scan and pay separately</h4>
-  <p>Use cash or credit/debit card at the register.</p>
-
-  <h4>Save payment in the app</h4>
-  <p>Check-out faster by saving a credit/debit card or PayPal to your account. You’ll be able to order ahead or scan and
-    pay at the register in one step.
-  </p>
-
-  <h3>2★Stars per dollar</h3>
-  Add funds in the app
-
-  <h4>Preload</h4>
-  <p>To save time and earn Stars twice as fast, add money to your digital Starbucks Card using any payment option. Scan
-    and pay in one step or order ahead in the app.</p>
-
-  <h4>Register your gift card</h4>
-  <p>Then use it to pay through the app. You can even consolidate balances from multiple cards in one place.</p>
+      <tr>
+        <td>
+          <h3>2★Stars per dollar</h3>
+          <p>Add funds in the app</p>
+        </td>
+        <td>
+          <h4>Preload</h4>
+          <p>To save time and earn Stars twice as fast, add money to your digital Starbucks Card using any payment
+            option. Scan and pay in one step or order ahead in the app.</p>
+        </td>
+        <td>
+          <h4>Register your gift card</h4>
+          <p>Then use it to pay through the app. You can even consolidate balances from multiple cards in one place.</p>
+        </td>
+      </tr>
+    </tbody>
+  </table>
 
 </body>
 
