Update styles and markup.

--- a/index.html
+++ b/index.html
@@ -128,7 +128,8 @@
         <a href="#">Learn more</a>
       </div>
 
-      <div>
+      <div class="box">
+        <img src="https://www.starbucks.com/weblx/images/rewards/benefits/2-order-and-pay-ahead.jpg" alt="smartphone">
         <h4>Order & pay ahead</h4>
         <p>Enjoy the convenience of in-store, curbside or drive-thru pickup at select stores.</p>
         <a href="#">Learn more</a>
