Update styles and markup.

--- a/index.html
+++ b/index.html
@@ -13,21 +13,23 @@
   <header>
     <div>
       <!-- LOGO -->
-      <a href="/">
-        <img src="#" />
+      <a href="#">
+        <img src="/assets/logo.png" />
       </a>
 
-      <ul>
-        <li>Menu</li>
-        <li>Rewards</li>
-        <li>Gift Cards</li>
+      <!-- <div> -->
+      <ul class="menu-buttons">
+        <li><a href="#">Menu</a></li>
+        <li><a href="">Rewards</a></li>
+        <li><a href="">Gift Cards</a></li>
       </ul>
+      <!-- </div> -->
     </div>
 
     <div>
       <a>Find a store</a>
-      <button>Sign in</button>
-      <button>Join now</button>
+      <button class="white-button">Sign in</button>
+      <button class="black-button">Join now</button>
     </div>
   </header>
 
@@ -40,7 +42,7 @@
     <h1>Free Coffee is a tap away</h1>
     <p>Join now to start earning Rewards.</p>
 
-    <button>Join now</button>
+    <button class="green-button">Join now</button>
     <p><a href="#">join in the app</a> for the best experience</p>
   </div>
 
